# PurpLLM

./: README.md
chatbot/: Dockerfile  app.py  pyproject.toml
chatbot/defense/: app.py
defense/: Dockerfile  proxy.py  pyproject.toml
model/: README.md
terraform/: main.tf
