[tool.poetry]
name = "PurpLLM-chatbot"
version = "0.1.0"
description = "Python-based chat bot front-end for PurpLLM lab"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
httpx = "^0.24.0"
transformers = "^4.30.0"
torch = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
