[tool.poetry]
name = "purpllm-chatbot"
version = "0.1.0"
description = "Gradio front end for PurpLLM (OpenAI edition)"

[tool.poetry.dependencies]
python      = ">=3.10,<3.13"
gradio      = "^3.33"
openai      = "^1.14"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
