[tool.poetry]
name = "PurpLLM-defense"
version = "0.1.0"
description = "Python-based guardrail proxy for PurpLLM lab"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
httpx = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
